spacing and colours fixed

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -87,7 +87,7 @@ background: #707070;
   background-color: white;
 }
 
-.contact-pg {
+.jumbotron-white {
   display:block;
   background-color:white;
   overflow:scroll;
